# ManasPDF

./: .gitignore  CMakeLists.txt  DOTNET-API.md  LICENSE  ManasPDF.sln  README.md  THIRD-PARTY-NOTICES.txt
.github/: FUNDING.yml
src/ManasPDF/: ManasPDF.csproj  ManasPDF.targets  PdfDocument.cs  PdfException.cs  PdfLinkExport.cs  PdfPage.cs  PdfTextGlyph.cs
src/ManasPDF.Wpf/: ManasPDF.Wpf.csproj  PdfViewer.xaml  PdfViewer.xaml.cs
src/ManasPDF/Internal/: NativeApi.cs
src/PDFCore/: CMakeLists.txt  FontCache.h  GlyphCache.cpp  GlyphCache.h  IPdfPainter.h  Jbig2Decoder.cpp  Jbig2Decoder.h  PageRenderCache.h  PdfBitmapCanvas.cpp  PdfBitmapCanvas.h  PdfContentParser.cpp  PdfContentParser.h  PdfCore.cpp  PdfDebug.cpp  PdfDebug.h  PdfDocument.cpp  PdfDocument.h  PdfEngine.h  PdfFilters.cpp  PdfFilters.h  PdfGradient.cpp  PdfGradient.h  PdfGraphicsState.h  PdfLexer.cpp  PdfLexer.h  PdfObject.h  PdfPainter.cpp  PdfPainter.h  PdfPainterD2D.cpp  PdfPainterD2D.h  PdfPainterGPU.cpp  PdfPainterGPU.h  PdfParser.cpp  PdfParser.h  PdfPath.h  PdfTextExtractor.cpp  PdfTextExtractor.h  dllmain.cpp  framework.h  pch.cpp  (+1 more)
src/PDFCore/ProjectHarfBuzz/lib/: harfbuzz.lib
src/PDFCore/ProjectHarfBuzz/lib/cmake/harfbuzz/: harfbuzzConfig-debug.cmake  harfbuzzConfig.cmake
src/PDFCore/ProjectHarfBuzz/lib/pkgconfig/: harfbuzz.pc
src/PDFCore/Projects/lib/cmake/freetype/: freetype-config.cmake
src/PDFCore/Projects/lib/pkgconfig/: freetype2.pc
src/PDFCore/zlib/: adler32.c
